examples/parser/invalid/function_non_primitive_return_type.xana

def invalid_return_type() :: [14 :: int] do
end

def main() do end